add `esc` key support rename property `resize` to `allowResize`

--- a/src/assets/slideout.less
+++ b/src/assets/slideout.less
@@ -9,6 +9,7 @@
   overflow: hidden;
   font-size: 14px;
   font-weight: normal;
+  outline: none;
 
   &-show-header {
     .slide-content {
@@ -135,6 +136,7 @@
   bottom: 0;
   height: 48px;
   padding: 5px 10px;
+  line-height: 36px;
   box-sizing: border-box;
   border-top: 1px solid #EEE;
   border-bottom: 1px solid #DDD;
