add fixed supported

--- a/src/assets/slideout.less
+++ b/src/assets/slideout.less
@@ -11,6 +11,10 @@
   font-weight: normal;
   outline: none;
 
+  &-fixed {
+    position: fixed;
+  }
+
   &-show-header {
     .slide-content {
       top: 48px;
