--- a/src/assets/slideout.less
+++ b/src/assets/slideout.less
@@ -26,13 +26,21 @@
       bottom: 48px;
     }
   }
+
+  &-fullscreen {
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+  }
 }
 
-.enable-animation {
+.vue-slideout-enable-animation {
   opacity: 0;
   transition: opacity @duration, left 1ms @duration, top 1ms @duration, bottom 1ms @duration, right 1ms @duration;
 
-  &.visible {
+  &.vue-slideout-visible {
     opacity: 1;
     transition: opacity @duration, left 1ms, top 1ms, bottom 1ms, right 1ms;
   }
@@ -40,6 +48,10 @@
   .vue-slideout-layout {
     transition-property: left, right, top, bottom;
     transition-duration: @duration;
+  }
+
+  .vue-slideout-drag-handle {
+    transition: background-color 318ms;
   }
 }
 
@@ -153,40 +165,37 @@
   font-weight: bold;
 }
 
-@drag-handle-padding: 2px;
-@drag-handle-size: 1px;
-@drag-handle-bar-size: 3px;
-@drag-handle-color: rgba(86, 148, 235, 0.88);
+@drag-handle-bar-padding: -1px;
+@drag-handle-bar-size: 1px;
+@drag-handle-bar-size: 5px;
+@drag-handle-color: rgba(59, 56, 58, 0.28);
 .vue-slideout-drag-handle {
   position: absolute;
   z-index: 60;
   user-select: none;
+  border: 2px solid transparent;
+  box-sizing: border-box;
 
   &:hover {
-    background-color: @drag-handle-color;
+    border-color: @drag-handle-color;
   }
 
   &:active {
-    background-color: darken(@drag-handle-color, 10%);
+    border-color: darken(@drag-handle-color, 10%);
   }
 }
 
-.dock-top {
+.vue-slideout-dock-top {
   .vue-slideout-drag-handle {
-    bottom: @drag-handle-padding;
+    bottom: @drag-handle-bar-padding;
     left: 0;
     right: 0;
-    height: @drag-handle-size;
+    height: @drag-handle-bar-size;
     cursor: ns-resize;
-
-    &:hover, &:active {
-      bottom: 0;
-      height: @drag-handle-bar-size;
-    }
   }
 }
 
-.dock-right {
+.vue-slideout-dock-right {
   .vue-slideout-btn-close {
     transform: rotate(90deg);
   }
@@ -194,51 +203,36 @@
   .vue-slideout-drag-handle {
     top: 0;
     bottom: 0;
-    left: @drag-handle-padding;
-    width: @drag-handle-size;
+    left: @drag-handle-bar-padding;
+    width: @drag-handle-bar-size;
     cursor: ew-resize;
-
-    &:hover, &:active {
-      left: 0;
-      width: @drag-handle-bar-size;
-    }
   }
 }
 
-.dock-bottom {
+.vue-slideout-dock-bottom {
   .vue-slideout-btn-close {
     transform: rotate(180deg);
   }
 
   .vue-slideout-drag-handle {
-    top: @drag-handle-padding;
+    top: @drag-handle-bar-padding;
     left: 0;
     right: 0;
-    height: @drag-handle-size;
+    height: @drag-handle-bar-size;
     cursor: ns-resize;
-
-    &:hover, &:active {
-      top: 0;
-      height: @drag-handle-bar-size;
-    }
   }
 }
 
-.dock-left {
+.vue-slideout-dock-left {
   .vue-slideout-btn-close {
     transform: rotate(-90deg);
   }
 
   .vue-slideout-drag-handle {
     top: 0;
-    right: @drag-handle-padding;
+    right: @drag-handle-bar-padding;
     bottom: 0;
-    width: @drag-handle-size;
+    width: @drag-handle-bar-size;
     cursor: ew-resize;
-
-    &:hover, &:active {
-      right: 0;
-      width: @drag-handle-bar-size;
-    }
   }
 }
