- Refactor sample pages - Fix typescript declare issue

--- a/src/components/slideout.less
+++ b/src/components/slideout.less
@@ -218,7 +218,7 @@
 }
 
 .vue-slideout-dock-bottom {
-  .vue-slideout-btn-close {
+  .vue-slideout-btn-close svg {
     transform: rotate(180deg);
   }
 
@@ -232,7 +232,7 @@
 }
 
 .vue-slideout-dock-left {
-  .vue-slideout-btn-close {
+  .vue-slideout-btn-close svg {
     transform: rotate(-90deg);
   }
 
