--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -60,6 +60,16 @@
   }
 }
 
+.vue-slideout-btn-fullscreen {
+  svg:first-child {
+    display: inline-block;
+  }
+
+  svg:last-child {
+    display: none;
+  }
+}
+
 .vue-slideout-dock-right {
   > .vue-slideout-layout {
     > .vue-slideout-header .vue-slideout-btn-close svg {
