ADD auto fit size support

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -75,6 +75,7 @@
   border-top: 1px solid #EEE;
   border-bottom: 1px solid #DDD;
   z-index: 50;
+  background: inherit;
 }
 
 .vue-slideout-dock-top {
@@ -126,4 +127,5 @@
 @import "header";
 @import "animation";
 @import "fullscreen";
-@import "drag";
+@import "resize";
+@import "autosize";
