--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -10,6 +10,7 @@
   border-top: 1px solid #DDD;
   border-bottom: 1px solid #EEE;
   z-index: 50;
+  background: inherit;
 }
 
 .vue-slideout-title-text {
