--- a/src/styles/fullscreen.less
+++ b/src/styles/fullscreen.less
@@ -1,4 +1,4 @@
-.vue-slideout-fullscreen {
+.slideout-fullscreen {
   position: fixed;
   overflow: hidden;
   left: 0;
@@ -6,8 +6,8 @@
   right: 0;
   bottom: 0;
 
-  > .vue-slideout-layout {
-    > .vue-slideout-header .vue-slideout-btn-fullscreen {
+  > .slideout-layout {
+    > .slideout-header .slideout-btn-fullscreen {
       svg:first-child {
         display: none;
       }
@@ -18,8 +18,8 @@
     }
   }
 
-  &.vue-slideout-visible {
-    > .vue-slideout-layout {
+  &.slideout-visible {
+    > .slideout-layout {
       width: 100% !important;
       height: 100% !important;
     }
