--- a/src/styles/autosize.less
+++ b/src/styles/autosize.less
@@ -1,11 +1,11 @@
-.vue-slideout-autosize {
-  > .vue-slideout-layout {
+.slideout-autosize {
+  > .slideout-layout {
     max-width: 100%;
     max-height: 100%;
     box-sizing: border-box;
     overflow: hidden;
 
-    > .vue-slideout-content {
+    > .slideout-content {
       left: unset;
       top: unset;
       right: unset;
@@ -19,14 +19,14 @@
     }
   }
 
-  &.vue-slideout-show-header {
-    > .vue-slideout-layout {
+  &.slideout-show-header {
+    > .slideout-layout {
       padding-top: 48px;
     }
   }
 
-  &.vue-slideout-show-footer {
-    > .vue-slideout-layout {
+  &.slideout-show-footer {
+    > .slideout-layout {
       padding-bottom: 48px;
     }
   }
