--- a/src/styles/resize.less
+++ b/src/styles/resize.less
@@ -3,7 +3,7 @@
 @drag-handle-bar-size: 5px;
 @drag-handle-color: rgba(92, 143, 235, 0.63);
 
-.vue-slideout-drag-handle {
+.slideout-drag-handle {
   position: absolute;
   z-index: 60;
   user-select: none;
@@ -20,9 +20,9 @@
   }
 }
 
-.vue-slideout-dock-top {
-  > .vue-slideout-layout {
-    > .vue-slideout-drag-handle {
+.slideout-dock-top {
+  > .slideout-layout {
+    > .slideout-drag-handle {
       bottom: @drag-handle-bar-padding;
       left: 0;
       right: 0;
@@ -32,9 +32,9 @@
   }
 }
 
-.vue-slideout-dock-right {
-  > .vue-slideout-layout {
-    > .vue-slideout-drag-handle {
+.slideout-dock-right {
+  > .slideout-layout {
+    > .slideout-drag-handle {
       top: 0;
       bottom: 0;
       left: @drag-handle-bar-padding;
@@ -44,9 +44,9 @@
   }
 }
 
-.vue-slideout-dock-bottom {
-  > .vue-slideout-layout {
-    > .vue-slideout-drag-handle {
+.slideout-dock-bottom {
+  > .slideout-layout {
+    > .slideout-drag-handle {
       top: @drag-handle-bar-padding;
       left: 0;
       right: 0;
@@ -56,9 +56,9 @@
   }
 }
 
-.vue-slideout-dock-left {
-  > .vue-slideout-layout {
-    > .vue-slideout-drag-handle {
+.slideout-dock-left {
+  > .slideout-layout {
+    > .slideout-drag-handle {
       top: 0;
       right: @drag-handle-bar-padding;
       bottom: 0;
@@ -68,15 +68,15 @@
   }
 }
 
-.vue-slideout-allow-resize {
-  &.vue-slideout-dock-left, &.vue-slideout-dock-right {
-    > .vue-slideout-layout {
+.slideout-allow-resize {
+  &.slideout-dock-left, &.slideout-dock-right {
+    > .slideout-layout {
       will-change: width;
     }
   }
 
-  &.vue-slideout-dock-top, &.vue-slideout-dock-bottom {
-    > .vue-slideout-layout {
+  &.slideout-dock-top, &.slideout-dock-bottom {
+    > .slideout-layout {
       will-change: height;
     }
   }
