Add Supported for Vue3

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -38,6 +38,8 @@
   background-color: #FFFFFF;
   box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.1);
   will-change: auto;
+  border: 1px solid #EEE;
+  box-sizing: border-box;
 }
 
 .slideout-mask {
