--- a/src/styles/autosize.less
+++ b/src/styles/autosize.less
@@ -1,5 +1,5 @@
-.slideout-autosize {
-  > .slideout-layout {
+.slideout-is--autosize {
+  > .slideout-panel {
     max-width: 100%;
     max-height: 100%;
     box-sizing: border-box;
@@ -19,14 +19,14 @@
     }
   }
 
-  &.slideout-show-header {
-    > .slideout-layout {
+  &.slideout-header--visible {
+    > .slideout-panel {
       padding-top: 48px;
     }
   }
 
-  &.slideout-show-footer {
-    > .slideout-layout {
+  &.slideout-footer--visible {
+    > .slideout-panel {
       padding-bottom: 48px;
     }
   }
