IMPROVE code styles

--- a/src/styles/resize.less
+++ b/src/styles/resize.less
@@ -68,7 +68,7 @@
   }
 }
 
-.slideout-resize-enabled {
+.slideout-is--resizable {
   &.slideout-dock--left, &.slideout-dock--right {
     > .slideout-panel {
       will-change: width;
