IMPROVE Mouse event for elements when the mask is disabled

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -11,6 +11,7 @@
   outline: none;
   display: none;
   will-change: auto;
+  pointer-events: none;
 
   &-is--fixed {
     position: fixed;
@@ -40,6 +41,7 @@
   will-change: auto;
   border: 1px solid #EEE;
   box-sizing: border-box;
+  pointer-events: auto;
 }
 
 .slideout-mask {
@@ -49,6 +51,7 @@
   top: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, .5);
+  pointer-events: auto;
 }
 
 .slideout-content {
