IMPROVE Use flex layout instead the absolute layout

--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -1,16 +1,14 @@
 
 .vue-slideout-header {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  height: 48px;
   padding: 5px 10px;
   box-sizing: border-box;
   border-top: 1px solid #DDD;
   border-bottom: 1px solid #EEE;
   z-index: 50;
   background: inherit;
+  flex: 0 0 auto;
+  display: flex;
+  justify-content: space-between;
 }
 
 .vue-slideout-title-text {
@@ -21,12 +19,8 @@
 }
 
 .vue-slideout-title-buttons {
-  position: absolute;
-  right: 0;
-  top: 0;
-  height: 48px;
-  padding: 6px 10px;
   box-sizing: border-box;
+  position: relative;
 }
 
 .vue-slideout-btn-close, .vue-slideout-btn-fullscreen {
