IMPROVE Style of vue-slideout-layout ADD `v-model` support (Can be used to instead `:visible.sync`)

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -16,17 +16,17 @@
     position: fixed;
   }
 
-  &-show-header {
-    > .vue-slideout-layout > .vue-slideout-content {
-      top: 48px;
-    }
-  }
-
-  &-show-footer {
-    > .vue-slideout-layout > .vue-slideout-content {
-      bottom: 48px;
-    }
-  }
+  //&-show-header {
+  //  > .vue-slideout-layout > .vue-slideout-content {
+  //    top: 48px;
+  //  }
+  //}
+  //
+  //&-show-footer {
+  //  > .vue-slideout-layout > .vue-slideout-content {
+  //    bottom: 48px;
+  //  }
+  //}
 }
 
 .vue-slideout-layout {
@@ -58,6 +58,7 @@
   overflow: auto;
   z-index: 30;
   flex: 1 1 auto;
+  position: relative;
 }
 
 .vue-slideout-footer {
